--- a/app/src/main/res/layout/layout_article_item.xml
+++ b/app/src/main/res/layout/layout_article_item.xml
@@ -24,7 +24,16 @@
     android:layout_marginStart="8dp"
     android:textSize="20sp"
     android:textStyle="bold"
-    android:maxLines="2"
+    android:maxLines="1"
     tools:text="Nie Nie pass Mobile" />
+
+  <TextView
+    android:id="@+id/textViewContent"
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
+    android:layout_below="@+id/textView"
+    android:layout_alignStart="@id/textView"
+    android:maxLines="2"
+    tools:text="New news" />
 
 </RelativeLayout>
