--- a/app/src/main/res/layout/layout_toolbar.xml
+++ b/app/src/main/res/layout/layout_toolbar.xml
@@ -13,14 +13,14 @@
     android:layout_alignParentStart="true"
     android:layout_centerVertical="true"
     android:layout_marginStart="8dp"
-    android:text="Add article" />
+    android:text="@string/action_post" />
 
   <com.google.android.material.appbar.MaterialToolbar
     android:id="@+id/toolbar"
     android:layout_width="match_parent"
     android:layout_height="?actionBarSize"
+    app:title="@string/info_articles"
     app:titleCentered="true"
-    android:background="@color/white"
-    tools:title="@string/app_name" />
+    android:background="@color/white" />
 
 </RelativeLayout>
